# azure-openai-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  sglang-entrypoint.sh  tei-cpu-entrypoint.sh  tei-gpu-entrypoint.sh  tgi-entrypoint.sh  vllm-entrypoint.sh
entrypoints/: sglang-entrypoint.sh  tei-cpu-entrypoint.sh  tei-gpu-entrypoint.sh  tgi-entrypoint.sh  vllm-entrypoint.sh
examples/: azure-foundry-agents.py  azure-foundry-inference.py
src/: errors.rs  main.rs  proxy.rs  schemas.rs  utils.rs
src/handlers/: chat_completions.rs  embeddings.rs  health.rs  info.rs  mod.rs
src/schemas/: azure.rs  chat_completions.rs  embeddings.rs  info.rs  mod.rs
