[package]
name = "oaiaz-rs"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A proxy for OpenAI-compatible routes to Azure AI"
repository = "https://github.com/alvarobartt/oaiaz-rs"
authors = ["Alvaro Bartolome <alvarobartt@gmail.com>"]

[dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
hyper-util = { version = "0.1.11", features = ["tokio", "client", "http1", "client-legacy", "http2"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
