[package]
name = "openai-azure-proxy"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A proxy for OpenAI-compatible routes to Azure AI"
repository = "https://github.com/alvarobartt/openai-azure-proxy"
authors = ["Alvaro Bartolome <alvarobartt@gmail.com>"]

[dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
hyper-util = { version = "0.1.11", features = ["tokio", "client", "http1", "client-legacy", "http2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
